--- a/python/src/PosteriorDistribution_doc.i.in
+++ b/python/src/PosteriorDistribution_doc.i.in
@@ -44,14 +44,14 @@ In the other cases, the PDF is the probability distribution function for the dis
 
 Parameters
 ----------
-deconditioned : :class:`~openturns.DeconditionedDistribution`
+deconditioned : :class:`~openturns.CompoundDistribution`
     The distribution of density :math:`f_{\vect{X}}(\vect{x}) = \int f_{\vect{X}|\vect{\Theta}=\vect{y}}(\vect{x}|\vect{y}) f_{\vect{Y}}(\vect{y})\di{\vect{y}}`.
 observations : 2-d sequence of float
     Observations :math:`\vect{x}_i`.
 
 See Also
 --------
-openturns.DeconditionedDistribution
+openturns.CompoundDistribution
 openturns.MetropolisHastings
 
 Examples
@@ -63,7 +63,7 @@ Examples
 >>> # Deconditioned distribution
 >>> atoms = [ot.Uniform(0.0, 1.0), ot.Uniform(1.0, 2.0)]
 >>> conditioning = ot.JointDistribution(atoms)
->>> deconditioned = ot.DeconditionedDistribution(conditionedDistribution, conditioning)
+>>> deconditioned = ot.CompoundDistribution(conditionedDistribution, conditioning)
 >>> # Observations
 >>> observationsSize = 5
 >>> observationsDistribution = ot.Distribution(conditionedDistribution)
@@ -79,7 +79,7 @@ Examples
 
 Parameters
 ----------
-deconditioned : :class:`~openturns.DeconditionedDistribution`
+deconditioned : :class:`~openturns.CompoundDistribution`
     The deconditioned distribution."
 
 // ---------------------------------------------------------------------
@@ -89,7 +89,7 @@ deconditioned : :class:`~openturns.DeconditionedDistribution`
 
 Returns
 -------
-deconditioned : :class:`~openturns.DeconditionedDistribution`
+deconditioned : :class:`~openturns.CompoundDistribution`
     The deconditioned distribution."
 
 // ---------------------------------------------------------------------
