--- a/python/src/CompoundDistribution_doc.i.in
+++ b/python/src/CompoundDistribution_doc.i.in
@@ -1,5 +1,5 @@
-%feature("docstring") OT::DeconditionedDistribution
-"Deconditioned distribution.
+%feature("docstring") OT::CompoundDistribution
+"Compound distribution.
 
 Let :math:`\inputRV` be a random vector of dimension :math:`\inputDim` such that
 :math:`\vect{X}|\vect{\Theta}` follows the distribution :math:`\mathcal{L}_{\vect{X}|\vect{\Theta}}`,
@@ -72,18 +72,18 @@ Notes
 With the default constructor, the resulting random variable :math:`X` follows a
 trapezoidal distribution parameterized by :math:`(-1, 0, 1, 2)`.
 
-Note that a :class:`~openturns.DeconditionedDistribution` can be obtained as the
+Note that a :class:`~openturns.CompoundDistribution` can be obtained as the
 first marginal distribution of a :class:`~openturns.JointByConditioningDistribution`.
 
 Several :class:`~openturns.ResourceMap` entries allow for a more fine-grained control over the distribution:
 
-- The string entry *DeconditionedDistribution-ContinuousDiscretizationMethod* specifies the default
+- The string entry *CompoundDistribution-ContinuousDiscretizationMethod* specifies the default
   :class:`~openturns.WeightedExperiment` which is used to discretize the continuous part of the conditioning distribution
   in order to perform the integration. It can be *GaussProduct*, *QMC* or *MC*: The default is *GaussProduct*, well adapted if the conditioned model is *regular*, meaning that its range does not depend on the parameters (e.g. a :class:`~openturns.Normal` distribution). Otherwise, one of the other discretization methods is to be 
   preferred (e.g. for a :class:`~openturns.Uniform` distribution).
-- The integer entry *DeconditionedDistribution-MarginalIntegrationNodesNumber* specifies the number of nodes used to the
+- The integer entry *CompoundDistribution-MarginalIntegrationNodesNumber* specifies the number of nodes used to the
   integration in each direction (only active when a quadrature method is applied),
-- The integer entry *DeconditionedDistribution-MarginalIntegrationNodesNumber* specifies the maximum number of nodes used to 
+- The integer entry *CompoundDistribution-MarginalIntegrationNodesNumber* specifies the maximum number of nodes used to 
   the multivariate integration (only active when a quadrature method is applied).
 
 Examples
@@ -94,16 +94,16 @@ Create a distribution:
 >>> conditioningDist = ot.Normal(0.0, 1.0)
 >>> g = ot.SymbolicFunction(['y'], ['y', '0.1+y^2'])
 >>> conditionedDist = ot.Normal()
->>> finalDist = ot.DeconditionedDistribution(conditionedDist, conditioningDist, g)
+>>> finalDist = ot.CompoundDistribution(conditionedDist, conditioningDist, g)  # doctest: +SKIP
 
 Draw a sample:
 
->>> sample = finalDist.getSample(5)
+>>> sample = finalDist.getSample(5)  # doctest: +SKIP
 "
 
 // ---------------------------------------------------------------------
 
-%feature("docstring") OT::DeconditionedDistribution::getConditionedDistribution
+%feature("docstring") OT::CompoundDistribution::getConditionedDistribution
 "Accessor to the distribution's conditioned distribution parameter *conditionedDistribution*.
 
 Returns
@@ -115,7 +115,7 @@ conditionedDistribution : :class:`~openturns.Distribution`
 
 // ---------------------------------------------------------------------
 
-%feature("docstring") OT::DeconditionedDistribution::getConditioningDistribution
+%feature("docstring") OT::CompoundDistribution::getConditioningDistribution
 "Accessor to the distribution's conditioned distribution parameter *conditioningDistribution*.
 
 Returns
@@ -125,7 +125,7 @@ conditioningDistribution : :class:`~openturns.Distribution`
 "
 // ---------------------------------------------------------------------
 
-%feature("docstring") OT::DeconditionedDistribution::getLinkFunction
+%feature("docstring") OT::CompoundDistribution::getLinkFunction
 "Accessor to the distribution's conditioned distribution parameter *linkFunction*.
 
 Returns
@@ -137,7 +137,7 @@ linkFunction : :class:`~openturns.Function`
 
 // ---------------------------------------------------------------------
 
-%feature("docstring") OT::DeconditionedDistribution::setConditionedDistribution
+%feature("docstring") OT::CompoundDistribution::setConditionedDistribution
 "Accessor to the distribution's conditioned distribution parameter *conditionedDistribution*.
 
 Parameters
@@ -149,7 +149,7 @@ conditionedDistribution : :class:`~openturns.Distribution`
 
 // ---------------------------------------------------------------------
 
-%feature("docstring") OT::DeconditionedDistribution::setConditioningDistribution
+%feature("docstring") OT::CompoundDistribution::setConditioningDistribution
 "Accessor to the distribution's conditioned distribution parameter *conditioningDistribution*.
 
 Parameters
@@ -159,7 +159,7 @@ conditioningDistribution : :class:`~openturns.Distribution`
 "
 // ---------------------------------------------------------------------
 
-%feature("docstring") OT::DeconditionedDistribution::setLinkFunction
+%feature("docstring") OT::CompoundDistribution::setLinkFunction
 "Accessor to the distribution's conditioned distribution parameter *linkFunction*.
 
 Parameters
