--- a/python/src/PosteriorDistribution_doc.i.in
+++ b/python/src/PosteriorDistribution_doc.i.in
@@ -36,7 +36,7 @@ with :math:`f_{\inputRV|\vect{\theta} = g(\vect{y})}` the PDF of the distributio
 where :math:`\vect{\Theta}` has been replaced by :math:`g(\vect{y})` and :math:`f_{\vect{Y}}` the PDF of the prior distribution
 of  :math:`\vect{Y}`.
 
-Note that the denominator  of :eq:`postPDF` is the PDF of the deconditioned distribution of :math:`\inputRV|\vect{\Theta}=g(\vect{Y})`
+Note that the denominator  of :eq:`postPDF` is the PDF of the compound distribution of :math:`\inputRV|\vect{\Theta}=g(\vect{Y})`
 with respect to the prior distribution of :math:`\vect{Y}`.
 
 In the other cases, the PDF is the probability distribution function for the discrete components and the :math:`\int` are replaced by some
@@ -44,7 +44,7 @@ In the other cases, the PDF is the probability distribution function for the dis
 
 Parameters
 ----------
-deconditioned : :class:`~openturns.CompoundDistribution`
+compound : :class:`~openturns.CompoundDistribution`
     The distribution of density :math:`f_{\vect{X}}(\vect{x}) = \int f_{\vect{X}|\vect{\Theta}=\vect{y}}(\vect{x}|\vect{y}) f_{\vect{Y}}(\vect{y})\di{\vect{y}}`.
 observations : 2-d sequence of float
     Observations :math:`\vect{x}_i`.
@@ -60,37 +60,37 @@ Examples
 >>> import openturns.experimental as otexp
 >>> ot.RandomGenerator.SetSeed(0)
 >>> conditionedDistribution = ot.Normal()
->>> # Deconditioned distribution
+>>> # Compound distribution
 >>> atoms = [ot.Uniform(0.0, 1.0), ot.Uniform(1.0, 2.0)]
 >>> conditioning = ot.JointDistribution(atoms)
->>> deconditioned = ot.CompoundDistribution(conditionedDistribution, conditioning)
+>>> compound = ot.CompoundDistribution(conditionedDistribution, conditioning)
 >>> # Observations
 >>> observationsSize = 5
 >>> observationsDistribution = ot.Distribution(conditionedDistribution)
 >>> observationsDistribution.setParameter(conditioning.getMean())
 >>> observations = observationsDistribution.getSample(observationsSize)
 >>> # Posterior distribution
->>> distribution = otexp.PosteriorDistribution(deconditioned, observations)"
+>>> distribution = otexp.PosteriorDistribution(compound, observations)"
 
 // ---------------------------------------------------------------------
 
-%feature("docstring") OT::PosteriorDistribution::setDeconditionedDistribution
-"Deconditioned distribution accessor.
+%feature("docstring") OT::PosteriorDistribution::setCompoundDistribution
+"Compound distribution accessor.
 
 Parameters
 ----------
-deconditioned : :class:`~openturns.CompoundDistribution`
-    The deconditioned distribution."
+compound : :class:`~openturns.CompoundDistribution`
+    The compound distribution."
 
 // ---------------------------------------------------------------------
 
-%feature("docstring") OT::PosteriorDistribution::getDeconditionedDistribution
-"Deconditioned distribution accessor.
+%feature("docstring") OT::PosteriorDistribution::getCompoundDistribution
+"Compound distribution accessor.
 
 Returns
 -------
-deconditioned : :class:`~openturns.CompoundDistribution`
-    The deconditioned distribution."
+compound : :class:`~openturns.CompoundDistribution`
+    The compound distribution."
 
 // ---------------------------------------------------------------------
 
