DeconditionedRV: Deprecated for CompoundRV

--- a/python/src/CMakeLists.txt
+++ b/python/src/CMakeLists.txt
@@ -760,7 +760,7 @@ ot_add_python_module(bayesian bayesian_module.i
                       IndependentMetropolisHastings.i IndependentMetropolisHastings_doc.i.in
                       UserDefinedMetropolisHastings.i UserDefinedMetropolisHastings_doc.i.in
                       Gibbs.i Gibbs_doc.i.in
-                      DeconditionedRandomVector.i DeconditionedRandomVector_doc.i.in
+                      CompoundRandomVector.i CompoundRandomVector_doc.i.in
                       UncertaintyBayesianTemplateDefs.i
                     )
 
