--- a/python/src/FourierSeriesFactory_doc.i.in
+++ b/python/src/FourierSeriesFactory_doc.i.in
@@ -11,9 +11,25 @@ Generates the Fourier basis defined as follows:
       \psi_{2k+2}(x) & = & \sqrt{2}\cos(kx)
     \end{array}
 
+This basis is orthogonal with respect to the uniform distribution
+with minimum bound :math:`-\pi` and maximum bound :math:`\pi`.
+Moreover, the basis functions have unit norm.
+
 See also
 --------
-OrthogonalUniVariatePolynomialFunctionFactory"
+OrthogonalUniVariatePolynomialFunctionFactory
+
+Examples
+--------
+The next example creates a tensor-product basis of Fourier functions.
+
+>>> import openturns as ot
+>>> inputDimension = 3
+>>> familyColl = [ot.FourierSeriesFactory() for i in range(inputDimension)]
+>>> enumerateFunction = ot.LinearEnumerateFunction(inputDimension)
+>>> fourierMultivariateBasis = ot.OrthogonalProductFunctionFactory(
+>>>     familyColl, enumerateFunction
+>>> )"
 %enddef
 %feature("docstring") OT::FourierSeriesFactory
 OT_FourierSeriesFactory_doc
