In FittingAlgorithm, made public all the run methods.
We have now many ways of applying the FittingAlgorithm::run
The methods are documented and tested

--- a/python/src/FittingAlgorithmImplementation_doc.i.in
+++ b/python/src/FittingAlgorithmImplementation_doc.i.in
@@ -28,6 +28,21 @@ OT_FittingAlgorithm_doc
 %define OT_FittingAlgorithm_run_doc
 "Run the algorithm.
 
+Usage:
+  run(*x, y, weight, psi, indices*)
+
+  run(*x, y, psi, indices*)
+
+  run(*y, weight, indices, proxy*)
+
+  run(*y, indices, indices*)
+
+  run(method, y*)
+
+With the first and second usages, we build the design proxy and apply the corresponding run.
+With the third and fourth usages, we build a least square method with the proxy and right hand size.
+With the fifth usage, we apply the fitting algorithm using an already defined least squares method.
+
 Parameters
 ----------
 x : 2-d sequence of float
@@ -40,6 +55,10 @@ psi : sequence of :class:`~openturns.Function`
     Basis
 indices : sequence of int
     Indices of the basis
+proxy : :class:`~openturns.DesignProxy`
+    The design proxy
+method : :class:`~openturns.LeastSquaresMethod`
+    Least square method (QR, SVD or Cholesky)
 
 Returns
 -------
