Distribution: Add SmallSupport key
Closes #2907

--- a/lib/etc/openturns.conf.in
+++ b/lib/etc/openturns.conf.in
@@ -1011,6 +1011,7 @@
   <Distribution-SmallDimensionEntropy             value_int="3"       />
   <Distribution-RoughnessSamplingSize             value_int="524288"  />
   <Distribution-SmallDimensionRoughness           value_int="3"       />
+  <Distribution-SmallSupport                      value_int="10"      />
   <Distribution-SupportEpsilon                    value_float="1.0e-14" />
   <Distribution-TailDependenceEpsilon             value_float="1.0e-12"/>
   <Distribution-TailDependenceMargin              value_float="1.0e-3"/>
