uc: Rename distribution attribute
Closes #2761
Closes #3025

--- a/python/src/ExperimentIntegration_doc.i.in
+++ b/python/src/ExperimentIntegration_doc.i.in
@@ -27,7 +27,7 @@ Integrate the Ishigami physical model.
 >>> im = ishigami_function.IshigamiModel()
 >>> ot.RandomGenerator.SetSeed(0)
 >>> sampleSize = 32768
->>> experiment = ot.MonteCarloExperiment(im.inputDistribution, sampleSize)
+>>> experiment = ot.MonteCarloExperiment(im.distribution, sampleSize)
 >>> integration = ot.ExperimentIntegration(experiment)
 >>> approximatedOutputMean = integration.integrate(im.model)
 >>> print(approximatedOutputMean)
@@ -42,7 +42,7 @@ Compute the L2 norm of a function.
 ... )
 >>> ot.RandomGenerator.SetSeed(0)
 >>> sampleSize = 65536
->>> experiment = ot.MonteCarloExperiment(im.inputDistribution, sampleSize)
+>>> experiment = ot.MonteCarloExperiment(im.distribution, sampleSize)
 >>> integration = ot.ExperimentIntegration(experiment)
 >>> functionNorm = integration.computeL2Norm(centeredIshigamiFunction)
 >>> print(functionNorm)
@@ -85,7 +85,7 @@ Examples
 3.5
 >>> sampleSize = 2 ** 12  # Sobol' sequence is a base 2 sequence
 >>> sequence = ot.SobolSequence(im.dim)
->>> experiment = ot.LowDiscrepancyExperiment(sequence, im.inputDistribution, 
+>>> experiment = ot.LowDiscrepancyExperiment(sequence, im.distribution, 
 ...                                          sampleSize, False)
 >>> integration = ot.ExperimentIntegration(experiment)
 >>> approximatedOutputMean = integration.integrate(im.model)
@@ -133,7 +133,7 @@ Examples
 ... ['sin(x1) + 7 * (sin(x2))^2 + 0.1 * x3^4 * sin(x1) - 3.5'])
 >>> sampleSize = 2 ** 12  # Sobol' sequence is a base 2 sequence
 >>> sequence = ot.SobolSequence(im.dim)
->>> experiment = ot.LowDiscrepancyExperiment(sequence, im.inputDistribution, sampleSize, False)
+>>> experiment = ot.LowDiscrepancyExperiment(sequence, im.distribution, sampleSize, False)
 >>> integration = ot.ExperimentIntegration(experiment)
 >>> functionNorm = integration.computeL2Norm(centeredIshigamiFunction)
 >>> print(functionNorm[0])
