--- a/python/src/FunctionalChaosValidation_doc.i.in
+++ b/python/src/FunctionalChaosValidation_doc.i.in
@@ -104,7 +104,7 @@ accurate estimator of the MSE.
 >>> from openturns.usecases import ishigami_function
 >>> im = ishigami_function.IshigamiModel()
 >>> sampleSize = 500 
->>> inputTrain = im.inputDistribution.getSample(sampleSize)
+>>> inputTrain = im.distribution.getSample(sampleSize)
 >>> outputTrain = im.model(inputTrain)
 >>> multivariateBasis = ot.OrthogonalProductPolynomialFactory([im.X1, im.X2, im.X3])
 >>> selectionAlgorithm = ot.PenalizedLeastSquaresAlgorithmFactory()
@@ -114,7 +114,7 @@ accurate estimator of the MSE.
 >>> basisSize = enumerateFunction.getStrataCumulatedCardinal(totalDegree)
 >>> adaptiveStrategy = ot.FixedStrategy(multivariateBasis, basisSize)
 >>> chaosalgo = ot.FunctionalChaosAlgorithm(
-...     inputTrain, outputTrain, im.inputDistribution, adaptiveStrategy, projectionStrategy
+...     inputTrain, outputTrain, im.distribution, adaptiveStrategy, projectionStrategy
 ... )
 >>> chaosalgo.run()
 >>> result = chaosalgo.getResult()
