--- a/lib/src/Base/MetaModel/CMakeLists.txt
+++ b/lib/src/Base/MetaModel/CMakeLists.txt
@@ -7,9 +7,11 @@ ot_add_source_file (LinearTaylor.cxx)
 ot_add_source_file (QuadraticTaylor.cxx)
 ot_add_source_file (LinearLeastSquares.cxx)
 ot_add_source_file (QuadraticLeastSquares.cxx)
+ot_add_source_file (MetaModelResult.cxx)
 
 ot_install_header_file (OTBaseMetaModel.hxx)
 ot_install_header_file (LinearTaylor.hxx)
 ot_install_header_file (QuadraticTaylor.hxx)
 ot_install_header_file (LinearLeastSquares.hxx)
 ot_install_header_file (QuadraticLeastSquares.hxx)
+ot_install_header_file (MetaModelResult.hxx)
