--- a/python/src/SpaceFillingC2_doc.i.in
+++ b/python/src/SpaceFillingC2_doc.i.in
@@ -1,16 +1,20 @@
 %define OT_SpaceFillingC2_doc
 "Space filling C2 (centered L2-discrepancy) computation.
 
+See also
+--------
+SpaceFilling, SpaceFillingMinDist, SpaceFillingPhiP
+
 Notes
 -----
-Compute the centered L2 discrepancy:
+Compute the criterion based on the centered L2 discrepancy of sample points denoted by :math:`(\vect{x}_1, \dots, \vect{x}_\sampleSize)` where :math:`\vect{x}_k \in \Rset^\inputDim`:
 
 .. math::
     :nowrap:
 
     \begin{multline*}
-    C^2(X_{d}^N) = \left(\frac{13}{12}\right)^{d} - \frac{2}{N} \sum_{i=1}^{N} \prod_{k=1}^{d} \left( 1 + \frac{1}{2} |x_k^{(i)} - 0.5| - \frac{1}{2} |x_k^{(i)} - 0.5|^2 \right)\\
-             + \frac{1}{N^2} \sum_{i,j=1}^{N} \prod_{k=1}^{d} \left( 1 + \frac{1}{2} |x_k^{(i)} - 0.5| + \frac{1}{2} |x_k^{(j)} - 0.5| - \frac{1}{2} |x_k^{(i)} - x_k^{(j)}| \right)
+    C^2((\vect{x}_1, \dots, \vect{x}_\sampleSize)) = \left(\frac{13}{12}\right)^{\inputDim} - \frac{2}{\sampleSize} \sum_{i=1}^{\sampleSize} \prod_{k=1}^{\inputDim} \left( 1 + \frac{1}{2} |x_k^{(i)} - 0.5| - \frac{1}{2} |x_k^{(i)} - 0.5|^2 \right)\\
+             + \frac{1}{\sampleSize^2} \sum_{i,j=1}^{\sampleSize} \prod_{k=1}^{\inputDim} \left( 1 + \frac{1}{2} |x_k^{(i)} - 0.5| + \frac{1}{2} |x_k^{(j)} - 0.5| - \frac{1}{2} |x_k^{(i)} - x_k^{(j)}| \right)
     \end{multline*}
 "
 
