--- a/python/src/SpaceFillingMinDist_doc.i.in
+++ b/python/src/SpaceFillingMinDist_doc.i.in
@@ -1,22 +1,26 @@
 %define OT_SpaceFillingMinDist_doc
 "Space filling minimal distance criterion.
 
+See also
+--------
+SpaceFilling, SpaceFillingC2, SpaceFillingPhiP
+
 Notes
 -----
-Compute the criterion based on the minimal distance of sample points:
+Compute the criterion based on the minimal distance of sample points denoted by :math:`(\vect{x}_1, \dots, \vect{x}_\sampleSize)` where :math:`\vect{x}_k \in \Rset^\inputDim`:
 
 .. math::
     :nowrap:
 
     \begin{equation*}
-      \phi_{min}(\mat{X}) = \min_{i \neq j} \norm{ \vect{x}^{(i)} - \vect{x}^{(j)} }
+      \phi_{min}((\vect{x}_1, \dots, \vect{x}_\sampleSize)) = \min_{i \neq j} \norm{ \vect{x}^{(i)} - \vect{x}^{(j)} }
     \end{equation*}
 
 
-If at least one of the sample points does not belong to the unit cube
-(i.e. not all components belong to the interval :math:`[0,1]`),
+If at least one of the sample points does not belong to the cube :math:`[-1,1]^\inputDim`
+(i.e. not all components belong to the interval :math:`[-1,1]`),
 then the whole sample is rescaled.
-Letting :math:`\vect{M}` (resp. :math:`\vect{m}`) denote the point
+Let :math:`\vect{x}_{max}` (resp. :math:`\vect{x}_{min}`) denote the point
 containing the component-wise maximum (resp. minimum) values of the sample,
 the actual formula is in this case:
 
@@ -24,7 +28,7 @@ the actual formula is in this case:
     :nowrap:
 
     \begin{equation*}
-      \phi_{min}(X) = \min_{i \neq j} \norm{ \frac{\vect{x}^{(i)} - \vect{x}^{(j)}}{\vect{M} - \vect{m}} }
+      \phi_{min}(X) = \min_{i \neq j} \norm{ \frac{\vect{x}^{(i)} - \vect{x}^{(j)}}{\vect{x}_{max} - \vect{x}_{min}} }
     \end{equation*}
 "
 %enddef
