--- a/python/src/SpaceFillingPhiP_doc.i.in
+++ b/python/src/SpaceFillingPhiP_doc.i.in
@@ -1,6 +1,10 @@
 %define OT_SpaceFillingPhiP_doc
 "Space filling PhiP.
 
+See also
+--------
+SpaceFilling, SpaceFillingMinDist, SpaceFillingC2
+
 Parameters
 ----------
 p : int (default=50)
@@ -8,16 +12,17 @@ p : int (default=50)
 
 Notes
 -----
-Computes the criterion:
+Compute the criterion based a sample points denoted by :math:`(\vect{x}_1, \dots, \vect{x}_\sampleSize)` where :math:`\vect{x}_k \in \Rset^\inputDim`:
 
 .. math::
     :nowrap:
 
     \begin{equation*}
-      \phi_p(X) = \sum_{i=1}^{j} \sum_{j=1}^{n} \left( |x^{(i)} - x^{(j)}|^{-p} \right)^{\frac{1}{p}}
+      \phi_p((\vect{x}_1, \dots, \vect{x}_\sampleSize)) = \left(\sum_{i=1}^{\sampleSize} \sum_{j<i}
+      \|\vect{x}_i - \vect{x}_j\|_2^{-p} \right)^{\frac{1}{p}}
     \end{equation*}
 
-This criterion is known to converge to mindist (minimal distance between two distinct elements of the design) criterion when p tends to infinity.
+This criterion is known to converge to the MinDist criterion defined in :class:`~openturns.SpaceFillingMinDist` (which is the minimal distance between two distinct elements of the design) criterion when :math:`p` tends to infinity.
 "
 
 %enddef
