--- a/lib/src/Uncertainty/Algorithm/MetaModel/FunctionalChaos/CMakeLists.txt
+++ b/lib/src/Uncertainty/Algorithm/MetaModel/FunctionalChaos/CMakeLists.txt
@@ -17,6 +17,7 @@ ot_add_source_file (IntegrationExpansion.cxx)
 ot_add_source_file (LeastSquaresStrategy.cxx)
 ot_add_source_file (IntegrationStrategy.cxx)
 ot_add_source_file (CleaningStrategy.cxx)
+ot_add_source_file (FieldFunctionalChaosAlgorithm.cxx)
 ot_add_source_file (FieldToPointFunctionalChaosAlgorithm.cxx)
 ot_add_source_file (FieldFunctionalChaosResult.cxx)
 ot_add_source_file (FieldFunctionalChaosSobolIndices.cxx)
@@ -37,6 +38,7 @@ ot_install_header_file (CleaningStrategy.hxx)
 ot_install_header_file (FunctionalChaosResult.hxx)
 ot_install_header_file (FunctionalChaosSobolIndices.hxx)
 ot_install_header_file (AdaptiveStrategy.hxx)
+ot_install_header_file (FieldFunctionalChaosAlgorithm.hxx)
 ot_install_header_file (FieldToPointFunctionalChaosAlgorithm.hxx)
 ot_install_header_file (FieldFunctionalChaosResult.hxx)
 ot_install_header_file (FieldFunctionalChaosSobolIndices.hxx)
