--- a/python/test/CMakeLists.txt
+++ b/python/test/CMakeLists.txt
@@ -809,6 +809,7 @@ ot_pyinstallcheck_test (Wilks_std)
 ot_pyinstallcheck_test (SimulationSensitivityAnalysis_std)
 ot_pyinstallcheck_test (ProbabilitySimulationAlgorithm_std)
 ot_pyinstallcheck_test (ProbabilitySimulationAlgorithm_draw)
+ot_pyinstallcheck_test (ProbabilitySimulationAlgorithm_inoutsample IGNOREOUT)
 ot_pyinstallcheck_test (ProbabilitySimulationAlgorithm_sensitivity)
 ot_pyinstallcheck_test (DirectionalSampling_std)
 ot_pyinstallcheck_test (PostAnalyticalControlledImportanceSampling_std)
