QuantileMatchingFactory: Skip doctest

--- a/python/src/QuantileMatchingFactory_doc.i.in
+++ b/python/src/QuantileMatchingFactory_doc.i.in
@@ -86,7 +86,7 @@ An example with 4 parameters:
 >>> sample = distribution.getSample(10)
 >>> distribution = ot.Beta()
 >>> factory = ot.QuantileMatchingFactory(distribution, [0.01, 1/3, 2/3, 0.99])
->>> inf_distribution = factory.build(sample)"
+>>> inf_distribution = factory.build(sample)  # doctest: +SKIP"
 
 // ---------------------------------------------------------------------
 
